# ecommerce/app/Http/Requests/ProductCreateRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ProductCreateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'name' => 'required|string|max:64|unique:products,name,NULL,id,deleted_at,NULL',
+            'description' => 'required|string',
+            'price' => 'required',
+            'category_id' => 'required',
+        ];
+    }
+}
