# ecommerce/routes/api.php
@@ -11,5 +11,7 @@ Route::group(['prefix' => 'v1'], function() {
         Route::post('users', 'Api\v1\UserController@store')->name('api.v1.users.store');
 
         Route::get('categories', 'Api\v1\CategoryController@index')->name('api.v1.categories.index');
+
+        Route::apiResource('products', 'Api\v1\ProductController', ['as' => 'api.v1']);
     });
 });
